--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,24 @@
-cv2PySide6==2.1.0
+contourpy==1.0.6
 cycler==0.11.0
-dict2xml==1.7.1
-fonttools==4.33.2
-kiwisolver==1.4.2
-matplotlib==3.5.1
-numpy==1.22.3
-opencv-python-headless==4.5.5.64
-packaging==21.3
+dict2xml==1.7.2
+fonttools==4.38.0
+kiwisolver==1.4.4
+matplotlib==3.6.2
+numpy==1.23.5
+packaging==22.0
 paho-mqtt==1.6.1
-Pillow==9.1.0
-pyparsing==3.0.8
-pyqtgraph==0.12.4
+Pillow==9.3.0
+pyparsing==3.0.9
+pyqtgraph==0.13.1
 pyserial==3.5
-PySide6==6.3.0
-PySide6-Addons==6.3.0
-PySide6-Essentials==6.3.0
+PySide6==6.4.1
+PySide6-Addons==6.4.1
+PySide6-Essentials==6.4.1
 python-dateutil==2.8.2
 PyYAML==6.0
 qimage2ndarray==1.9.0
-shiboken6==6.3.0
+shiboken6==6.4.1
 six==1.16.0
-strictyaml==1.6.1
-tenacity==8.0.1
+strictyaml==1.6.2
 toml==0.10.2
-xmltodict==0.12.0
+xmltodict==0.13.0
